<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:title="@string/app_name"
        app:titleTextColor="@color/primaryTextColor"
        android:background="?attr/colorSurface"
        android:id="@+id/toolbar"
        android:elevation="0dp"
        >

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_info"
            android:id="@+id/info"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="12dp"
            android:tint="?attr/colorOnSurface"
            android:contentDescription="@string/about_developer"
            />

        <ImageButton
            android:id="@+id/theme_toggle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/change_theme"
            android:padding="12dp"
            android:src="@drawable/ic_theme"
            android:tint="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:gravity="center"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="EN"
            android:textColor="?attr/colorOnPrimary"
            android:textStyle="bold"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/change_language" />


    </androidx.appcompat.widget.Toolbar>

</com.google.android.material.appbar.AppBarLayout>
