<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="16dp"
    android:background="@drawable/background_rounded_all"
    android:elevation="2dp"
    android:padding="16dp"
    >


    <TextView
        style="@style/CoinBitText.Huge"
        android:id="@+id/txt_chart_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$40.99"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_updown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="4dp"
        android:layout_marginTop="4dp"
        android:text="▲"
        android:textColor="@color/tertiaryTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_chart_price" />

    <TextView
        android:id="@+id/txt_chart_change1"
        style="@style/CoinBitText.BodyTertiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="12dp"
        android:text="+$0.04"
        app:layout_constraintBottom_toBottomOf="@+id/txt_updown"
        app:layout_constraintStart_toEndOf="@+id/txt_updown"
        app:layout_constraintTop_toTopOf="@+id/txt_updown" />

    <TextView
        android:id="@+id/txt_chart_change2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CoinBitText.Body"
        android:textColor="@color/tertiaryTextColor"
        android:text="+8.1%"
        app:layout_constraintBottom_toBottomOf="@+id/txt_chart_change1"
        app:layout_constraintStart_toEndOf="@+id/txt_chart_change1"
        app:layout_constraintTop_toTopOf="@+id/txt_chart_change1" />


    <com.robinhood.spark.SparkView
        android:id="@+id/sparkView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_chart_date"
        app:spark_animateChanges="true"
        app:spark_lineColor="@color/colorAccent"
        app:spark_scrubEnabled="true" />

    <TextView
        android:id="@+id/txt_chart_date"
        style="@style/CoinBitText.BodyTertiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/chart_date_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_chart_change2" />

    <TextView
        android:visibility="gone"
        style="@style/CoinBitText.Body1Alternate"
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chart_error"
        app:layout_constraintBottom_toBottomOf="@+id/sparkView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sparkView" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:fillViewport="false"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sparkView">

        <RadioGroup
            android:id="@+id/radio_group_main"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="4dp">

        <RadioButton
            android:id="@+id/radio_12h"
            android:textStyle="bold"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textColor="@drawable/range_radio_btn_selector"
            android:text="@string/period_1h"
            android:checked="true"
            android:button="@null"
            android:background="@drawable/range_radio_btn_selector_background"
            android:layout_width="64dp"
            android:layout_height="48dp"/>
        <RadioButton
            android:id="@+id/radio_1d"
            android:textStyle="bold"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textColor="@drawable/range_radio_btn_selector"
            android:text="@string/period_1day"
            android:checked="false"
            android:button="@null"
            android:background="@drawable/range_radio_btn_selector_background"
            android:layout_width="64dp"
            android:layout_height="48dp"/>
        <RadioButton
            android:id="@+id/radio_1w"
            android:textStyle="bold"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textColor="@drawable/range_radio_btn_selector"
            android:text="@string/period_1week"
            android:checked="false"
            android:button="@null"
            android:background="@drawable/range_radio_btn_selector_background"
            android:layout_width="64dp"
            android:layout_height="48dp"/>
        <RadioButton
            android:id="@+id/radio_1month"
            android:textStyle="bold"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textColor="@drawable/range_radio_btn_selector"
            android:text="@string/period_1month"
            android:checked="false"
            android:button="@null"
            android:background="@drawable/range_radio_btn_selector_background"
            android:layout_width="64dp"
            android:layout_height="48dp"/>
        <RadioButton
            android:id="@+id/radio_3month"
            android:textStyle="bold"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textColor="@drawable/range_radio_btn_selector"
            android:text="@string/period_3month"
            android:checked="false"
            android:button="@null"
            android:background="@drawable/range_radio_btn_selector_background"
            android:layout_width="64dp"
            android:layout_height="48dp"/>
        <RadioButton
            android:id="@+id/radio_1years"
            android:textStyle="bold"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textColor="@drawable/range_radio_btn_selector"
            android:text="@string/period_1year"
            android:checked="false"
            android:button="@null"
            android:background="@drawable/range_radio_btn_selector_background"
            android:layout_width="64dp"
            android:layout_height="48dp"/>
        <RadioButton
            android:id="@+id/radio_all"
            android:textStyle="bold"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textColor="@drawable/range_radio_btn_selector"
            android:text="@string/period_all"
            android:checked="false"
            android:button="@null"
            android:background="@drawable/range_radio_btn_selector_background"
            android:layout_width="64dp"
            android:layout_height="48dp"/>

        </RadioGroup>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
